# CrypticReasoner_green-agent

./: Dockerfile  README-template.md  README.md  pyproject.toml
.editor/: project-tree-layout.ini
src/: agent.py  purple_agent_gemini-flash.py  server.py  setup-resize-embeddings.py  setup.sh
